# MinecraftCounter

./: .gitignore  CMakeLists.txt
header/: commandHandler.h  config.h  usart.h
source/: commandHandler.c  config.c  main.c  usart.c
